[gd_scene load_steps=6 format=2]

[ext_resource path="res://bigBall.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.5

[sub_resource type="SphereMesh" id=9]
radius = 0.25
height = 0.5
radial_segments = 32
rings = 16

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.14902, 0.945098, 0.141176, 1 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=6]
radius = 0.25

[node name="bigBall" type="RigidBody" groups=["Projectile"]]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0 )
physics_material_override = SubResource( 4 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0181503, 0, 0.00637627 )
mesh = SubResource( 9 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
